feat: 명령어에 구분자를 사용했는지 검증